feat: add the remaining CRUD APIs and their corresponding specification
